--- a/package.json
+++ b/package.json
@@ -21,8 +21,12 @@
   },
   "homepage": "https://gitlab.com/vdaguenet/vintage-phone#README",
   "dependencies": {
+    "domready": "^1.0.8",
     "express": "^4.13.3",
-    "johnny-five": "^0.8.97"
+    "johnny-five": "^0.8.97",
+    "lodash.bindall": "^3.1.0",
+    "socket.io": "^1.3.7",
+    "socket.io-client": "^1.3.7"
   },
   "devDependencies": {
     "autoprefixer-stylus": "^0.8.0",
