--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev:server": "nodemon index.js",
+    "dev:server": "nodemon --harmony index.js",
     "dev:build": "webpack -d --watch",
     "prod": "npm run clean && webpack -p --progress",
     "clean": "find ./client/public/build -name \"*.map\" -type f -delete"
@@ -23,8 +23,8 @@
   "dependencies": {
     "domready": "^1.0.8",
     "express": "^4.13.3",
-    "johnny-five": "^0.8.97",
     "lodash.bindall": "^3.1.0",
+    "serialport": "^1.7.4",
     "socket.io": "^1.3.7",
     "socket.io-client": "^1.3.7"
   },
