--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "domready": "^1.0.8",
     "express": "^4.13.3",
     "lodash.bindall": "^3.1.0",
+    "raf": "^3.1.0",
     "serialport": "^1.7.4",
     "socket.io": "^1.3.7",
-    "socket.io-client": "^1.3.7"
+    "socket.io-client": "^1.3.7",
+    "three": "^0.72.0"
   },
   "devDependencies": {
     "autoprefixer-stylus": "^0.8.0",
