--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "domready": "^1.0.8",
     "express": "^4.13.3",
     "lodash.bindall": "^3.1.0",
+    "player": "^0.5.1",
     "serialport": "^1.7.4",
     "socket.io": "^1.3.7",
     "socket.io-client": "^1.3.7"
