--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "serialport": "^1.7.4",
     "socket.io": "^1.3.7",
     "socket.io-client": "^1.3.7",
-    "three": "^0.73.0"
+    "three": "^0.73.0",
+    "three-orbit-controls": "^72.0.0"
   },
   "devDependencies": {
     "aliasify": "^1.8.1",
